@@ -1,0 +1,5 @@
+gnss-sdr (0.0.5) unstable; urgency=low
+
+  * First release that installs on the system and can generate packages.
+  
+ -- Carles Fernandez-Prades <carles.fernandez@cttc.es>  Fri, 14 Nov 2014 02:03:00 +0100
